<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnsayhi"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginStart="488dp"
        android:layout_marginTop="140dp"
        android:background="#4527A0"
        android:text="@string/sayhi"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btndance"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="40dp"
        android:background="#4527A0"
        android:text="@string/dance"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnrepeat" />


    <Button
        android:id="@+id/btnaskquestion"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="40dp"
        android:background="#4527A0"
        android:text="@string/askquestion"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/btnrepeat"
        app:layout_constraintTop_toBottomOf="@+id/btnsayhi" />

    <Button
        android:id="@+id/btnfruittest"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="40dp"
        android:background="#4527A0"
        android:text="@string/fruittest"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/btnaskquestion"
        app:layout_constraintTop_toBottomOf="@+id/btnsayhi" />

    <Button
        android:id="@+id/btnbubble"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="40dp"
        android:background="#4527A0"
        android:text="@string/buble"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/btndance"
        app:layout_constraintTop_toBottomOf="@+id/btnaskquestion" />

    <Button
        android:id="@+id/btnrepeat"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="40dp"
        android:background="#4527A0"
        android:text="@string/repeat"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnsayhi" />

    <Button
        android:id="@+id/btnshaling"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:background="#4527A0"
        android:text="@string/shalin"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btnbubble"
        app:layout_constraintTop_toBottomOf="@+id/btnfruittest" />

</androidx.constraintlayout.widget.ConstraintLayout>